--- a/test/index.html
+++ b/test/index.html
@@ -269,6 +269,9 @@
 			</table>
 			
 			<style>
+				* {
+					box-sizing: border-box;
+				}
 				body {
 					font-family: sans-serif;
 					padding: 0;
@@ -278,8 +281,7 @@
 			
 				#message-container {
 					width: 100%;
-					height: 2em;
-					overflow: scroll;
+					overflow: hidden;
 					border: 1px solid #888;
 					position: relative;
 				}
